logs/tracking/build.make.595.log.stderr
In file included from /home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:1:0:
/home/dexheimere/thesis_ws/src/tracking/include/tracking/DepthFilter.h:25:8: error: extra qualification ‘DepthFilter::’ on member ‘computeTau’ [-fpermissive]
  float DepthFilter::computeTau(Eigen::Matrix4f T, Eigen::Vector3f p);
        ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp: In member function ‘void DepthFilter::updateFilter(Eigen::Matrix4f, Eigen::Matrix<float, 3, -1>, Eigen::Matrix<float, 3, -1>)’:
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:91:57: error: no matching function for call to ‘max(double, float)’
   float tau_inv  =  0.5 * (1.0/std::max(0.0000001, x-tau) - 1.0/(x+tau));
                                                         ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:91:57: note: candidates are:
In file included from /usr/include/c++/4.8/algorithm:61:0,
                 from /usr/local/include/opencv2/hal/defs.h:570,
                 from /usr/local/include/opencv2/core/cvdef.h:59,
                 from /usr/local/include/opencv2/core.hpp:52,
                 from /home/dexheimere/opencv/include/opencv2/opencv.hpp:46,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/ImageProcessing.h:5,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/DepthFilter.h:6,
                 from /home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:1:
/usr/include/c++/4.8/bits/stl_algobase.h:216:5: note: template<class _Tp> const _Tp& std::max(const _Tp&, const _Tp&)
     max(const _Tp& __a, const _Tp& __b)
     ^
/usr/include/c++/4.8/bits/stl_algobase.h:216:5: note:   template argument deduction/substitution failed:
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:91:57: note:   deduced conflicting types for parameter ‘const _Tp’ (‘double’ and ‘float’)
   float tau_inv  =  0.5 * (1.0/std::max(0.0000001, x-tau) - 1.0/(x+tau));
                                                         ^
In file included from /usr/include/c++/4.8/algorithm:61:0,
                 from /usr/local/include/opencv2/hal/defs.h:570,
                 from /usr/local/include/opencv2/core/cvdef.h:59,
                 from /usr/local/include/opencv2/core.hpp:52,
                 from /home/dexheimere/opencv/include/opencv2/opencv.hpp:46,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/ImageProcessing.h:5,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/DepthFilter.h:6,
                 from /home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:1:
/usr/include/c++/4.8/bits/stl_algobase.h:260:5: note: template<class _Tp, class _Compare> const _Tp& std::max(const _Tp&, const _Tp&, _Compare)
     max(const _Tp& __a, const _Tp& __b, _Compare __comp)
     ^
/usr/include/c++/4.8/bits/stl_algobase.h:260:5: note:   template argument deduction/substitution failed:
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:91:57: note:   deduced conflicting types for parameter ‘const _Tp’ (‘double’ and ‘float’)
   float tau_inv  =  0.5 * (1.0/std::max(0.0000001, x-tau) - 1.0/(x+tau));
                                                         ^
In file included from /usr/include/c++/4.8/algorithm:62:0,
                 from /usr/local/include/opencv2/hal/defs.h:570,
                 from /usr/local/include/opencv2/core/cvdef.h:59,
                 from /usr/local/include/opencv2/core.hpp:52,
                 from /home/dexheimere/opencv/include/opencv2/opencv.hpp:46,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/ImageProcessing.h:5,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/DepthFilter.h:6,
                 from /home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:1:
/usr/include/c++/4.8/bits/stl_algo.h:4231:5: note: template<class _Tp> _Tp std::max(std::initializer_list<_Tp>)
     max(initializer_list<_Tp> __l)
     ^
/usr/include/c++/4.8/bits/stl_algo.h:4231:5: note:   template argument deduction/substitution failed:
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:91:57: note:   mismatched types ‘std::initializer_list<_Tp>’ and ‘double’
   float tau_inv  =  0.5 * (1.0/std::max(0.0000001, x-tau) - 1.0/(x+tau));
                                                         ^
In file included from /usr/include/c++/4.8/algorithm:62:0,
                 from /usr/local/include/opencv2/hal/defs.h:570,
                 from /usr/local/include/opencv2/core/cvdef.h:59,
                 from /usr/local/include/opencv2/core.hpp:52,
                 from /home/dexheimere/opencv/include/opencv2/opencv.hpp:46,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/ImageProcessing.h:5,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/DepthFilter.h:6,
                 from /home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:1:
/usr/include/c++/4.8/bits/stl_algo.h:4236:5: note: template<class _Tp, class _Compare> _Tp std::max(std::initializer_list<_Tp>, _Compare)
     max(initializer_list<_Tp> __l, _Compare __comp)
     ^
/usr/include/c++/4.8/bits/stl_algo.h:4236:5: note:   template argument deduction/substitution failed:
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:91:57: note:   mismatched types ‘std::initializer_list<_Tp>’ and ‘double’
   float tau_inv  =  0.5 * (1.0/std::max(0.0000001, x-tau) - 1.0/(x+tau));
                                                         ^
make[2]: *** [CMakeFiles/tracking.dir/src/DepthFilter.cpp.o] Error 1
make[1]: *** [CMakeFiles/tracking.dir/all] Error 2
make: *** [all] Error 2
